# Bilsimulator

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: config.yml
gamemanger/: gamemanger.cpp  gamemanger.hpp
include/: WindowResize.hpp  ammo.hpp  arenawalls.hpp  boost.hpp  bullet.hpp  bulletmanager.hpp  camercontrolls.hpp  collision.hpp  collisionmanger.hpp  enemy.hpp  enemymanager.hpp  gamemanger.hpp  imguihandler.hpp  keyControlls.hpp  keycontrolls.hpp  keyinputmanager.hpp  landscape.hpp  landscape2.hpp  levelmanger.hpp  obstecalelvl2.hpp  pickupmanager.hpp  portalLVL2.hpp  tank.hpp  tankattack.hpp  tankmovment.hpp  trail.hpp  trailmanager.hpp  windowresize.hpp
src/: CMakeLists.txt  camercontrolls.cpp  collision.cpp  gamemanger.cpp  imguihandler.cpp  keycontrolls.cpp  keyinputhandler.cpp  landscape.cpp  tank.cpp  windowresize.cpp
src/collision/: collision.cpp  collisionmanger.cpp
src/landscape_arena/: arenawalls.cpp  landscape.cpp
src/level2/: enemy.cpp  obstecalelvl2.cpp  portalLVL2.cpp
src/managers/: bulletmanger.cpp  enemymanger.cpp  gamemanger.cpp  keyinputmanager.cpp  levelmanger.cpp  pickupmanger.cpp  trailmanager.cpp
src/powerups/: ammo.cpp  boost.cpp  bullet.cpp  doublespeed.cpp
src/powerups/ammo/: ammo.cpp
src/powerups/boost/: boost.cpp
src/tank/: tank.cpp  tankattack.cpp  tankmovment.cpp
tests/: CMakeLists.txt  test_tank.cpp
